# agentic-due-diligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  requirements.txt
api/: __init__.py  cli.py  main.py  runs.py
docs/: architecture.mmd  mcp_servers.md
evaluation/: README.md  extraction_eval.py  extraction_eval_results.json  manual_baseline.md  metrics.py  ragas_eval.py  results_20260626_225926.json  results_20260626_232557.json  results_20260627_155843.json  results_live_hardened_20260705.json  results_live_postfix_20260627.json  results_live_space_20260627_203747.json  run_eval.py  system_vs_human.md
evaluation/ground_truth/: boeing.json  chime.json  (+1 more)
frontend/: .env.local.example  .gitignore  INTEGRATION.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
knowledge_base/: nist_csf_summary.md  regulatory_reference.md  regulatory_reference_intl.md  severity_rubric.md
scripts/: verify_keys.py
src/: config.py  main.py
tests/: test_api.py  test_data_sufficiency.py  test_deduplication.py  test_entity_resolver.py  test_eval_metrics.py  test_extraction_agent.py  test_gemini_retry.py  test_hitl.py  test_integration_web.py  test_knowledge_base.py  test_mcp_companies_house.py  test_mcp_news.py  test_mcp_registry_lookup.py  test_mcp_sec_edgar.py  test_models.py  test_pdf_export.py  test_presentation.py  test_prompts.py  test_quote_anchor.py  test_ragas_eval.py  test_research_agent.py  test_risk_analysis_agent.py  test_source_credibility.py  test_storage.py  test_supervisor.py  test_synthesis_agent.py  test_temporal.py  test_tracing.py
(+62 files in other folders)
