[project]
name = "due-diligence-platform"
version = "0.1.0"
description = "Agentic Due Diligence Intelligence Platform — multi-agent LLM system for automated vendor and company risk assessment using MCP, LangGraph, and RAG"
authors = [
    { name = "Laaksh Parikh", email = "laakshparikh@gmail.com" }
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "rapidfuzz>=3.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "tavily-python>=0.5.0",
    "langfuse>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
eval = [
    "ragas>=0.1.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
]
pdf = [
    "weasyprint>=62.0",       # preferred: high-fidelity HTML→PDF (needs native GTK libs)
    "xhtml2pdf>=0.2.17",      # fallback: pure-Python renderer (Windows-friendly)
    "markdown>=3.7",
]

[project.scripts]
ddp = "src.main:main"
ddp-api = "api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live API calls — requires internet access",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]
